<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headline"/>
    <TextView
        android:id="@+id/last_thing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_thing" />
    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="4dp"
        android:text="@string/heading_create"
        android:background="@color/red"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/what_thing"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/what_text"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            tools:text= "Sample thing"
            android:background="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/where"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/where_text"
            android:layout_weight="3"
            android:layout_width="0dp"
            tools:text = "its location"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="4dp"
        android:background="@color/gray"
        android:text="@string/list_button_text"/>
</LinearLayout>
